# Paseo-Usage-Bridge

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  package.json  tsconfig.node.json
.github/: release-trigger
.github/workflows/: build-installers.yml  patch-credential-byte-limit.yml  validate.yml
docs/: CI_DIAGNOSTIC.md  implementation-status.md  notifications-and-paseo-daemon-integration.md  paseo-daemon-notifications-plan.md  provider-integrations-plan.md
src/: App.tsx  api.ts  dashboard-layout.css  icons.tsx  main.tsx  provider.css  readability.css  sidebar-controls.css  sidebar-width.css  styles.css  types.ts  updater.css
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: account_order.rs  alerts.rs  bridge_api.rs  lib.rs  main.rs  model.rs  oauth.rs  opencode_login.rs  state.rs  store.rs  usage.rs
src-tauri/src/providers/: anthropic.rs  antigravity.rs  mod.rs  openai.rs  opencode_go.rs
src/components/: AccountAlertModal.tsx  AccountRow.tsx  AddAccountModal.tsx  ProviderIcon.tsx  UsageBar.tsx
